feat(calm-hub): apply hierarchical AND rule to getReadableNamespaces
Switch from getUserAccessForUsername (flat, misses * grants) to
getGrantsForUser (user + * grants in one call), then apply the same
AND ancestor-chain check as canRead: a namespace is included only if
every level in its chain has a READ-sufficient grant. Guarantees search
results never include namespaces that would return 403 on click-through.